		Göran Weinholt for noticing.
20180927	Fixing big-endian ARM loads/stores (except perhaps double-word
		loads and stores); probably slows everything down a bit.
20181001	Continuing on the slow THUMB instruction interpretation.
20181008	Disk images added using -d for SGI modes are now SCSI, not IDE.
		Importing newer crimereg.h and crmfbreg.h from NetBSD.
20181009	Moving around SGI O2 graphics code, in preparation for making
		more use of the "new" NetBSD defines.
20181011	SGI O2 GBE now switches resolution if the OS wants it (i.e.
		Linux/O2), rather than requiring a recompile.
		Also, detection of Linux' "tweaked" (linear) mode, thus
		avoiding a recompile when experimenting with Linux/O2.
		NetBSD can now show some output on the O2 framebuffer too.
20181012	Fixing a bug in the generic X11 framebuffer output, so that
		scaledown is preserved even when a guest OS switches resultion
		at runtime.
		Continuing on the SGI O2 graphics; when the nr of tiles or
		"partial pixels" is in mismatch with the screen resolution,
		the skewed result now looks the same as on my real physical O2.
20181013	More SGI O2 graphics work: TLBs. OpenBSD can now show graphical
		console messages.
20181015	Some more emulated O2 registers now return the same values as
		my real O2 does.
		Refactoring the O2 "output" to always be 24-bit, separate from
		the emulated framebuffer tiles (which may be e.g. 8 bit).
		NetBSD's colors (RG3B2 mode) are now probably more correct.
		Changing from 64 to 128 MB ram for the O2; this matches what
		my real O2 has, and it is now detected correctly both by OSes
		and the PROM.
		Implementing the O2's GBE cursor; both bitmap and crosshair modes
		work exactly like on the real machine now.
		Finally fixed the bug which caused scroll-up to not work when
		running the O2's PROM.
20181016	More work on the O2 graphics; managed to get rid of the Linux
		tweaked special case rendering mode.
		Splitting the O2 GBE into a GBE part and a Rendering Engine part.